--- a/03-counter-app/src/index.css
+++ b/03-counter-app/src/index.css
@@ -6,3 +6,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
 }
+
+button{
+    font-size: 1.3rem;
+    margin-right: 10px;
+    padding: 10px;
+}
